linear-dafny/Test/modules/git-issue-31.dfy.expect
git-issue-31.dfy(12,25): Error: Module SSM_PCM expects 1 arguments but didn't receive any!
1 resolution/type errors detected in git-issue-31.dfy
